# Escale-Cusine-And-Grill

./: README.md  commands.txt  reset_test_password.py  test_staff_login.py
ECAG_site/: db.sqlite3  db.sqlite3.bak.20251125152447  db.sqlite3.bak.20251125153353  manage.py  package-lock.json  requirements.txt
ECAG_site/ECAG_site/: asgi.py  settings.py  urls.py  wsgi.py
ECAG_site/apps/Customer/: forms.py  urls.py  views.py
ECAG_site/apps/Reservations/: admin.py  models.py  urls.py  views.py
ECAG_site/apps/Staff/: urls.py  views.py
ECAG_site/apps/admin_panel/: urls.py  views.py
ECAG_site/apps/core/: urls.py  views.py
ECAG_site/apps/login_registration/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
mobile/: .gitignore  README.md  pyproject.toml
mobile/src/: admin_mobile.py  customer_dash.py  main.py  staff_dash.py
mobile/src/Login/: __init__.py  ui.py
mobile/src/Registration/: __init__.py  ui.py
mobile/src/Registration/services/: AuthService
mobile/src/customer/: customer_orders.py  customer_overview.py  customer_profile.py  customer_res.py
mobile/src/home/: __init__.py  service.py  ui.py
mobile/src/menu/: __init__.py  models.py  service.py  ui.py
mobile/src/notifications/: __init__.py  service.py
mobile/src/reservation/: __init__.py  models.py  service.py  ui.py
mobile/src/review/: __init__.py  models.py  service.py  ui.py
mobile/src/settings/: __init__.py  ui.py
mobile/src/staff/: staff_orders.py  staff_overview.py  staff_res.py
mobile/src/utils/: dashboard_api.py  dashboard_utils.py
(+108 files in other folders)
