[project]
name = "mobile"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.84.0",
    "flet-geolocator>=0.84.0",
    "flet-permission-handler>=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
org = "com.mycompany"
product = "mobile"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
permissions = ["location"]

[tool.flet.app]
path = "src"

[tool.flet.android.permission]
"android.permission.ACCESS_COARSE_LOCATION" = true
"android.permission.ACCESS_FINE_LOCATION" = true
